# whisper

./: .gitignore  AGENTS.md
Whisper/: Whisper.slnx
Whisper/Whisper/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Whisper.csproj  app.manifest
Whisper/Whisper (Package)/: Package.appxmanifest  Whisper (Package).assets.cache  Whisper (Package).wapproj
Whisper/Whisper/rust-worker/: Cargo.toml
Whisper/Whisper/rust-worker/src/: main.rs
Whisper/Whisper/scripts/: live_meeting_transcriber.py  requirements-live-transcriber.txt
