[package]
name = "live_meeting_transcriber_rust"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["whisper-rs/cuda"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
ctrlc = "3.4"
serde_json = "1.0"
wasapi = "0.22"
whisper-rs = { version = "0.16", default-features = false }
